scribble: fix spacing after a 'compact enumeration

--- a/pkgs/scribble-pkgs/scribble-lib/scribble/manual-style.css
+++ b/pkgs/scribble-pkgs/scribble-lib/scribble/manual-style.css
@@ -88,6 +88,9 @@ p, .SIntrapara {
     line-height: 1.4;
 }
 
+.compact {
+  padding: 0 0 1em 0;
+}
 
 li {
     list-style-position: outside;
